<resources>
    <string name="app_name">ioasys_book</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="entrar">Entrar</string>
    <string name="sair">Sair</string>
    <string name="email_e_ou_senha_incorretos">Email e/ou senha incorretos.</string>
    <string name="books">Books</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="book_title_sample">Crossin the Chase</string>
    <string name="book_date_sample">Publicado em 2020</string>
    <string name="editora_sample">Editora Loyola</string>
    <string name="qtd_paginas_sample">150 páginas</string>
    <string name="book_author_sample">Geoffrey A. Moore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="idioma">English</string>
    <string name="isbn_13">AD134F34AD224</string>
    <string name="isbn_10">ADSEFDR098</string>
    <string name="error_search_book">Não encontramos nenhum \nlivro com esse termo!</string>
    <string name="review_sample">The subject of “design thinking” is the rage at business schools, throughout corporations, and increasingly in the popular press—due in large part to the work of IDEO, a leading design firm, and its celebrated CEO, Tim Brown, who uses this book to show how the techniques and strategies of design belong at every level.</string>
</resources>