<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/default_margin"
    android:layout_marginVertical="4dp"
    android:background="@color/white"
    android:elevation="20dp"
    app:cardCornerRadius="4dp">
    
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="@dimen/default_padding"
        android:paddingVertical="@dimen/large_padding">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgBook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/img_book_1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvBookTitle"
            style="@style/Book_Title"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/imgBook"
            app:layout_constraintTop_toTopOf="@id/imgBook"
            tools:text="@string/book_title_sample"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvBookAuthor"
            style="@style/Book_Subtitle"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvBookTitle"
            app:layout_constraintLeft_toRightOf="@id/imgBook"
            tools:text="@string/book_author_sample" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvPages"
            style="@style/Book_Description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            app:layout_constraintBottom_toTopOf="@id/tvBookEditor"
            app:layout_constraintLeft_toRightOf="@id/imgBook"
            tools:text="@string/qtd_paginas_sample" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvBookEditor"
            style="@style/Book_Description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            app:layout_constraintBottom_toTopOf="@id/tvBookDate"
            app:layout_constraintLeft_toRightOf="@id/imgBook"
            tools:text="@string/editora_sample" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvBookDate"
            style="@style/Book_Description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            app:layout_constraintBottom_toBottomOf="@id/imgBook"
            app:layout_constraintLeft_toRightOf="@id/imgBook"
            tools:text="@string/book_date_sample" />




    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>