<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/img_background_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="240dp"
        android:drawableStart="@drawable/logo"
        android:drawablePadding="@dimen/half_margin"
        android:gravity="center"
        android:text="@string/books"
        android:textColor="@color/white"
        android:textSize="@dimen/books_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldEmail"
        style="@style/input_login_style"
        android:hint="@string/email"

        app:boxStrokeWidth="0dp"
        android:background="@drawable/bg_input"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLabel">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textFieldEditEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_input"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldPass"
        style="@style/input_pass_style"
        android:hint="@string/password"
        app:boxStrokeColor="@color/black_traslucent"
        app:hintTextColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        android:background="@drawable/bg_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textFieldEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textFieldEditPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_input"
            android:inputType="textPassword"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/enterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/default_margin"
        android:backgroundTint="@color/white"
        android:text="@string/entrar"
        android:textColor="@color/pink"
        app:cornerRadius="@dimen/max_corner"
        app:layout_constraintBottom_toBottomOf="@id/textFieldPass"
        app:layout_constraintEnd_toEndOf="@id/textFieldPass"
        app:layout_constraintTop_toTopOf="@id/textFieldPass" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/half_margin"
        android:text="@string/email_e_ou_senha_incorretos"
        android:textColor="@color/white"
        android:textSize="@dimen/error_text_size"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/textFieldPass"
        app:layout_constraintTop_toBottomOf="@id/textFieldPass"
        tools:visibility="visible" />


</androidx.constraintlayout.widget.ConstraintLayout>