<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_book_list"
    tools:context=".presentation.ui.fragments.BookListFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="32dp"
        android:drawableStart="@drawable/logo"
        android:drawablePadding="@dimen/half_margin"
        android:drawableTint="@color/black"
        android:gravity="center"
        android:text="@string/books"
        android:textColor="@color/black"
        android:textSize="@dimen/books_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btnLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:background="@drawable/ic_log_out"
        android:contentDescription="@string/entrar"
        android:minWidth="48dp"
        android:minHeight="48dp"

        app:layout_constraintBottom_toBottomOf="@id/tvLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvLabel" />

    <com.rafael.ioasys_book.presentation.ui.custom_views.CustomSearchInput
        android:id="@+id/edSearch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        app:custom_hint="@string/pesquisar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLabel" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvBooks"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:paddingHorizontal="@dimen/default_padding"
        android:clipToPadding="false"
        tools:listitem="@layout/book_item"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edSearch"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvEmptyList"
        style="@style/ListEmpty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_search_book"
        android:visibility="gone"
        android:layout_marginTop="120dp"
        app:layout_constraintEnd_toEndOf="@+id/rvBooks"
        app:layout_constraintStart_toStartOf="@+id/rvBooks"
        app:layout_constraintTop_toTopOf="@+id/rvBooks"
        tools:visibility="visible" />


</androidx.constraintlayout.widget.ConstraintLayout>