<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="24dp"
    tools:context=".presentation.ui.fragments.BookDetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_close"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="16dp"
            android:background="@drawable/ic_close_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/img_big_book_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:elevation="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_close">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_big_book"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/img_book_2"
                tools:src="@drawable/img_book_2" />

        </com.google.android.material.card.MaterialCardView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_book_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="40dp"
            android:ellipsize="end"

            android:lineSpacingMultiplier="1.43"
            android:maxLines="2"
            android:textColor="@color/gray_translucent"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="@id/guide_line_end"
            app:layout_constraintStart_toStartOf="@id/guide_line_start"
            app:layout_constraintTop_toBottomOf="@id/img_big_book_container"
            tools:text="Change By Design Second Line Example" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_book_author"
            style="@style/Book_Subtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/tv_book_name"
            app:layout_constraintStart_toStartOf="@id/guide_line_start"
            app:layout_constraintTop_toBottomOf="@id/tv_book_name"
            tools:text="Tim Brown, Julie Zhuo, Fried Maximilian" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_info_label"
            style="@style/Book_Description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/editora_sample"
            android:textAllCaps="true"
            app:layout_constraintStart_toStartOf="@id/guide_line_start"
            app:layout_constraintTop_toBottomOf="@id/tv_book_author" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/labels_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="start"
            android:orientation="vertical"
            android:paddingStart="0dp"
            android:paddingEnd="8dp"
            app:layout_constraintEnd_toStartOf="@id/info_container"
            app:layout_constraintStart_toStartOf="@id/guide_line_start"
            app:layout_constraintTop_toBottomOf="@id/tv_info_label">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Book_Description"
                android:id="@+id/tv_book_pages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qtd_paginas_sample" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Book_Description"
                android:id="@+id/tv_book_editor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/editora_sample" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Book_Description"
                android:id="@+id/tv_book_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/editora_sample" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Book_Description"
                android:id="@+id/tv_book_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/idioma" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Book_Description"
                android:id="@+id/tv_book_origin_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/book_title_sample" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Book_Description"
                android:id="@+id/tv_book_ISBN10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/isbn_10" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Book_Description"
                android:id="@+id/tv_book_ISBN13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/isbn_13" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/info_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="end"
            android:orientation="vertical"
            android:paddingStart="8dp"
            android:paddingEnd="0dp"
            app:layout_constraintEnd_toEndOf="@id/guide_line_end"
            app:layout_constraintStart_toEndOf="@id/labels_container"
            app:layout_constraintTop_toBottomOf="@id/tv_info_label">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Book_Description"
                android:id="@+id/tv_info_pages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="304 páginas" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Book_Description"
                android:id="@+id/tv_info_editor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Editora Loyola" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Book_Description"
                android:id="@+id/tv_info_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="2020" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Book_Description"
                android:id="@+id/tv_info_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Inglês" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Book_Description"
                android:id="@+id/tv_info_origin_book_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Change By Design" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Book_Description"
                android:id="@+id/tv_info_isbn10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="0062856626" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Book_Description"
                android:id="@+id/tv_info_isbn13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="978-0062856623" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_review_title"
            style="@style/Book_Description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/editora_sample"
            android:textAllCaps="true"
            app:layout_constraintEnd_toEndOf="@id/guide_line_end"
            app:layout_constraintStart_toStartOf="@id/guide_line_start"
            app:layout_constraintTop_toBottomOf="@id/labels_container" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/Book_Description"
            android:id="@+id/tv_review"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="@id/guide_line_end"
            app:layout_constraintStart_toStartOf="@id/guide_line_start"
            app:layout_constraintTop_toBottomOf="@id/tv_review_title"
            tools:text="The subject of “design thinking” is the rage at business schools, throughout corporations, and increasingly in the popular press—due in large part to the work of IDEO, a leading design firm, and its celebrated CEO, Tim Brown, who uses this book to show how the techniques and strategies of design belong at every level." />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_line_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="24dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_line_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="24dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>